--- a/CIT/src/assets/styles/test_view.css
+++ b/CIT/src/assets/styles/test_view.css
@@ -14,13 +14,19 @@
   padding: 20px;
 }
 
+.test-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
 .questions-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20px;
+  flex: 1;
+  margin-right: 20px;
 }
+
 
 .pagination {
   display: flex;
@@ -35,7 +41,6 @@
   background-color: #3584CE;
   color: white;
   cursor: pointer;
-  /* shadows */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -70,7 +75,6 @@
   background-color: #45A049;
 }
 
-/* shadows */
 .pagination button:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -83,6 +87,5 @@
   border-radius: 5px;
   background-color: #FF0000;
   color: white;
-  /* shadows */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
