feat: update question_list_component.css for responsive layout
Added media queries to the question_list_component.css file to improve the responsiveness of the layout. The styles have been adjusted for small screens (max-width: 1400px) and mobile devices (max-width: 600px), ensuring that the question list and grid layout adapt to different screen sizes. This change enhances the user experience by making the application more accessible and user-friendly on various devices.

--- a/CIT/src/assets/styles/question_list_component.css
+++ b/CIT/src/assets/styles/question_list_component.css
@@ -49,3 +49,23 @@
 /* en teoria no deberia ser necesario,
   ya que el examen lo aplican en una pc
   pero por si acaso */
+  
+/* for small screens */
+@media (max-width: 1400px) {
+  .question-list {
+    position: relative;
+    right: 0;
+    margin-top: 0;
+  }
+
+  .grid-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* for mobile */
+@media (max-width: 600px) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
